integration_tests/codegen_fail/fail/subscription/no_fields.stderr
error: GraphQL object must have at least one field
 --> $DIR/no_fields.rs:6:6
  |
6 | impl Obj {}
  |      ^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Objects
